cambios en login para que acepte departamento, municipio y verada

--- a/front/src/assets/i18n/es.json
+++ b/front/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
     "login": {
-        "login": "Ingreso"
+        "login": "INGRESO"
     },
     "general": {
         "select": "Seleccionar",
