se crea vista de de encuesta, se guarda info de servicios publicos

--- a/front/src/assets/i18n/es.json
+++ b/front/src/assets/i18n/es.json
@@ -90,5 +90,8 @@
         "legal_representative_phone": "Teléfono del Representante Legal",
         "legal_representative_email": "Email del Representante Legal",
         "experience": "Experiencia N° meses"
+    },
+    "inquest": {
+        "title":"Encuesta"
     }
 }
