cambios para que soporte guardar imagen en finca y en encuestas como base64. Cambios para saber si el dispositivo tiene o no internet

--- a/front/src/assets/i18n/es.json
+++ b/front/src/assets/i18n/es.json
@@ -77,7 +77,8 @@
         "city_origin": "Ciudad de Origen",
         "department_origin": "Departamento de Origen",
         "document_picture": "Foto del Documento",
-        "other": "Otro"
+        "other": "Otro",
+        "attached": "Adjunto"
     },
     "organization":{
         "title": "Encuesta Organización",
