cambios en ipos de agua para que guarde el selector multiple

--- a/front/src/assets/i18n/es.json
+++ b/front/src/assets/i18n/es.json
@@ -27,7 +27,7 @@
         "total_hectares": "Área Total de Hectáreas",
         "access_roads_availability": "Disponibilidad de Vias de acceso",
         "municipal_head_distance": "KM a Cabecera Municipal",
-        "water": "Agua",
+        "water": "Tipos de Agua",
         "electricity": "Electricidad",
         "aqueduct": "Acueducto",
         "septic_tank": "Pozo Séptico",
